complete subscribe button

--- a/buttons.html
+++ b/buttons.html
@@ -1,8 +1,12 @@
 <style>
     button {
-        background-color: red;
+        background-color: rgb(201, 0, 0);
         color: white;
         border: none;
+        height: 36px;
+        width: 105px;
+        border-radius: 4px;
+        cursor: pointer;
     }
 </style>
 
