--- a/buttons.html
+++ b/buttons.html
@@ -1,5 +1,5 @@
 <style>
-    button {
+    .subscribe-button {
         background-color: rgb(201, 0, 0);
         color: white;
         border: none;
@@ -7,8 +7,24 @@
         width: 105px;
         border-radius: 4px;
         cursor: pointer;
+        margin-right: 8px;
+    }
+
+    .join-button {
+        background-color: white;
+        border-color: rgb(41, 118, 211);
+        border-style: solid;
+        border-width: 1px;
+        color: rgb(41, 118, 211);
+        height: 36px;
+        width: 62px;
+        border-radius: 4px;
+        cursor: pointer;
     }
 </style>
 
-<button>SUBSCRIBE</button>
+<button class="subscribe-button">SUBSCRIBE</button>
 
+<button class="join-button">JOIN</button>
+
+//To do tomorrow, create the twitter 'Tweet button'
