--- a/buttons.html
+++ b/buttons.html
@@ -8,6 +8,15 @@
         border-radius: 4px;
         cursor: pointer;
         margin-right: 8px;
+        transition: opacity 0.15s;
+    }
+
+    .subscribe-button:hover{
+        opacity: 0.8;
+    }
+
+    .subscribe-button:active{
+        opacity: 0.6;
     }
 
     .join-button {
@@ -20,6 +29,28 @@
         width: 62px;
         border-radius: 4px;
         cursor: pointer;
+        transition: background-color 0.5s, color 0.5s;
+    }
+
+    .join-button:hover{
+        color: #fff;
+        background-color: rgb(41, 118, 211);;
+    }
+
+    .join-button:active{
+        opacity: 0.8;
+    }
+
+    .tweet-button {
+        background-color: rgb(2, 158, 255);
+        color: #fff;
+        border: none;
+        height: 36px;
+        width: 74px;
+        border-radius: 18px;
+        cursor: pointer;
+        font-weight: bold;
+        margin-left: 8px;
     }
 </style>
 
@@ -27,4 +58,7 @@
 
 <button class="join-button">JOIN</button>
 
-//To do tomorrow, create the twitter 'Tweet button'
+<button class="tweet-button">Tweet</button>
+
+<!--Twitter button next-->
+<!--subscribe-button:hover is a pseudoclass-->
