--- a/buttons.html
+++ b/buttons.html
@@ -1,71 +1,25 @@
-<style>
-    .subscribe-button {
-        background-color: rgb(201, 0, 0);
-        color: white;
-        border: none;
-        padding-left: 16px;
-        padding-right: 16px;
-        padding-top: 10px;
-        padding-bottom: 10px;
-        border-radius: 4px;
-        cursor: pointer;
-        margin-right: 8px;
-        transition: opacity 0.15s;
-    }
+<!DOCTYPE html>
+<html lang="en">
 
-    .subscribe-button:hover{
-        opacity: 0.8;
-    }
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="buttons.css">
+</head>
 
-    .subscribe-button:active{
-        opacity: 0.6;
-    }
+<body>
+    <button class="subscribe-button">SUBSCRIBE</button>
 
-    .join-button {
-        background-color: white;
-        border-color: rgb(41, 118, 211);
-        border-style: solid;
-        border-width: 1px;
-        color: rgb(41, 118, 211);
-        padding-top: 10px;
-        padding-bottom: 10px;
-        border-radius: 4px;
-        cursor: pointer;
-        transition: background-color 0.2s, color 0.2s;
-    }
+    <button class="join-button">JOIN</button>
 
-    .join-button:hover{
-        color: #fff;
-        background-color: rgb(41, 118, 211);;
-    }
+    <button class="tweet-button">Tweet</button>
+</body>
 
-    .join-button:active{
-        opacity: 0.8;
-    }
+</html>
 
-    .tweet-button {
-        background-color: rgb(2, 158, 255);
-        color: #fff;
-        border: none;
-        height: 36px;
-        width: 74px;
-        border-radius: 18px;
-        cursor: pointer;
-        font-weight: bold;
-        margin-left: 8px;
-        transition: box-shadow 0.15s;
-    }
 
-    .tweet-button:hover{
-        box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
-    }
-</style>
-
-<button class="subscribe-button">SUBSCRIBE</button>
-
-<button class="join-button">JOIN My Channel</button>
-
-<button class="tweet-button">Tweet</button>
 
 <!--Padding is a better alternative to setting the height and width-->
 <!--subscribe-button:hover is a pseudoclass-->
