--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <button>Hello</button>
     <a href="https://www.youtube.com/" target="_blank">Link to YouTube</a>
 
-<!--target attribute means it opens in a new page-->    
+<!--target attribute means it opens the link in a new tab-->    
 </body>
 </html>
