--- a/text.html
+++ b/text.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Text Manipulations</title>
+    <link rel="stylesheet" href="text.css">
 </head>
 <body>
-    
+    <p class="article-title">Talking Tech and AI with Google CEO Sundar Pichai!</p>
+    <p>3.4M Views 	&#183; 6 months ago</p>
 </body>
 </html>
