--- a/text.html
+++ b/text.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <p class="article-title">Talking Tech and AI with Google CEO Sundar Pichai!</p>
-    <p>3.4M Views 	&#183; 6 months ago</p>
+    <p class="video-statistics">3.4M Views 	&#183; 6 months ago</p>
+    <p class="video-author">Marques Brownlee	&#x2713 </p>
+    <p class="video-description">Talking tech and AI on the heels of Google I/O. 
+        Also a daily driver phone reveal from Google's CEO. Shoutout to Sundar!</p>
 </body>
 </html>
+
+<!--Paragraphs by default come with margins at the top and bottom to separate a previous paragragraph from the next-->
