Text styles & File paths

--- a/text.html
+++ b/text.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Text Manipulations</title>
     <link rel="stylesheet" href="text.css">
+    <script src="script.js"></script>
 </head>
+
 <body>
     <p class="article-title">Talking Tech and AI with Google CEO Sundar Pichai!</p>
-    <p class="video-statistics">3.4M Views 	&#183; 6 months ago</p>
-    <p class="video-author">Marques Brownlee	&#x2713 </p>
-    <p class="video-description">Talking tech and AI on the heels of Google I/O. 
+    <p class="video-statistics">3.4M Views &#183; 6 months ago</p>
+    <p class="video-author">Marques Brownlee &#x2713 </p>
+    <p class="video-description">Talking tech and AI on the heels of Google I/O.
         Also a daily driver phone reveal from Google's CEO. Shoutout to Sundar!</p>
+    <p class="apple-text">Shop early for the best selection of holiday favorites. <span class="shop-now">Shop Now &#62;</span> </p>
+    <p>Paragraphs <u>by default</u> come with margins at the top and bottom to separate a previous</p>
 </body>
+
 </html>
 
-<!--Paragraphs by default come with margins at the top and bottom to separate a previous paragragraph from the next-->
+<!--Paragraphs by default come with margins at the top and bottom to separate a previous paragragraph from the next
+
+- You can use span to group elements for styling. Span is an element added inside another element 
+and this is called nesting
+-->
