--- a/html-css_fundamentals/text.html
+++ b/html-css_fundamentals/text.html
@@ -8,6 +8,9 @@
     <title>Text Manipulations</title>
     <link rel="stylesheet" href="text.css">
     <script src="script.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -16,7 +19,8 @@
     <p class="video-author">Marques Brownlee &#x2713 </p>
     <p class="video-description">Talking tech and AI on the heels of Google I/O.
         Also a daily driver phone reveal from Google's CEO. Shoutout to Sundar!</p>
-    <p class="apple-text">Shop early for the best selection of holiday favorites. <span class="shop-now">Shop Now &#62;</span> </p>
+    <p class="apple-text">Shop early for the best selection of holiday favorites. <span class="shop-now">Shop Now
+            &#62;</span> </p>
     <p>Paragraphs <u>by default</u> come with margins at the top and bottom to separate a previous</p>
 </body>
 
