--- a/youtube.html
+++ b/youtube.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>YouTube</title>
+    <link rel="stylesheet" href="youtube.css">
 </head>
+
 <body>
+    <img class="thumbnail-1" src="thumbnails/thumbnail-1.webp" alt="marques-brownlee">
+    <input class="search-bar" type="textbox" placeholder="Search">
+
+    <input placeholder="Search" class="rounded-corners" type="text">
     
+<!--Do the challenge excercised befor continuing-->
 </body>
+
 </html>
+
+<!--Img is a void element which doesn't require a closing tag
+- when you set the width of images, the height also adjusts
+- Introduce borders to show you how your container looks. 
+-->
