CSS display property

--- a/youtube.html
+++ b/youtube.html
@@ -10,12 +10,13 @@
 </head>
 
 <body>
-    <img class="thumbnail-1" src="thumbnails/thumbnail-1.webp" alt="marques-brownlee">
     <input class="search-bar" type="textbox" placeholder="Search">
-
-    <input placeholder="Search" class="rounded-corners" type="text">
-    
-<!--Do the challenge excercised befor continuing-->
+    <img class="thumbnail-1" src="thumbnails/thumbnail-1.webp" alt="marques-brownlee">
+        
+    <p>Talking Tech and AI with Google CEO Sundar Pichai!</p>
+    <p class="video-author">Marques Brownlee</p>
+    <p class="video-stats">3.4M views 	&#183 6 months ago</p>
+    <div>div</div>
 </body>
 
 </html>
@@ -23,4 +24,6 @@
 <!--Img is a void element which doesn't require a closing tag
 - when you set the width of images, the height also adjusts
 - Introduce borders to show you how your container looks. 
+
+- Use the CSS property display to switch between inline and block inline elements 
 -->
