CSS - Nested layouts

--- a/youtube.html
+++ b/youtube.html
@@ -11,12 +11,27 @@
 
 <body>
     <input class="search-bar" type="textbox" placeholder="Search">
-    <img class="thumbnail-1" src="thumbnails/thumbnail-1.webp" alt="marques-brownlee">
-        
-    <p>Talking Tech and AI with Google CEO Sundar Pichai!</p>
-    <p class="video-author">Marques Brownlee</p>
-    <p class="video-stats">3.4M views 	&#183 6 months ago</p>
-    <div>div</div>
+    <div class="video-preview">
+        <img class="thumbnail-1" src="thumbnails/thumbnail-1.webp" alt="marques-brownlee">
+
+        <p>Talking Tech and AI with Google CEO Sundar Pichai!</p>
+        <p class="video-author">Marques Brownlee</p>
+        <p class="video-stats">3.4M views &#183 6 months ago</p>
+    </div>
+
+    <div class="video-preview">
+        <img class="thumbnail-1" src="thumbnails/ksi.jpg" alt="ksi">
+
+        <p>Try Not To Laugh Challenge #9</p>
+        <p class="video-author">KSI</p>
+        <p class="video-stats">19M views &#183 4 Years ago</p>
+    </div>
+
+    <div class="youtube-music">
+        <h3>Install YouTube Music</h3>
+        <p>Add YouTube Music to your desk for quick and easy access</p>
+    </div>
+
 </body>
 
 </html>
@@ -26,4 +41,6 @@
 - Introduce borders to show you how your container looks. 
 
 - Use the CSS property display to switch between inline and block inline elements 
+
+- By default div is a block element
 -->
