--- a/youtube.html
+++ b/youtube.html
@@ -11,26 +11,37 @@
 
 <body>
     <input class="search-bar" type="textbox" placeholder="Search">
-    <div class="video-preview">
-        <img class="thumbnail-1" src="thumbnails/thumbnail-1.webp" alt="marques-brownlee">
 
-        <p>Talking Tech and AI with Google CEO Sundar Pichai!</p>
-        <p class="video-author">Marques Brownlee</p>
-        <p class="video-stats">3.4M views &#183 6 months ago</p>
+
+    <div class="video-preview">
+
+        <div>
+            <img class="thumbnail-1" src="thumbnails/thumbnail-1.webp" alt="marques-brownlee">
+        </div>
+
+        <div>
+            
+            <div class="channel-image">
+                <img class="profile-picture" src="channel-pictures/brownlee.jpeg" alt="brownlee">
+            </div>
+
+            <div class="video-details">
+                <p>Talking Tech and AI with Google CEO Sundar Pichai!</p>
+                <p class="video-author">Marques Brownlee</p>
+                <p class="video-stats">3.4M views &#183 6 months ago</p>
+            </div>
+
+        </div>
+
     </div>
 
     <div class="video-preview">
         <img class="thumbnail-1" src="thumbnails/ksi.jpg" alt="ksi">
-
         <p>Try Not To Laugh Challenge #9</p>
         <p class="video-author">KSI</p>
         <p class="video-stats">19M views &#183 4 Years ago</p>
     </div>
 
-    <div class="youtube-music">
-        <h3>Install YouTube Music</h3>
-        <p>Add YouTube Music to your desk for quick and easy access</p>
-    </div>
 
 </body>
 
@@ -43,4 +54,6 @@
 - Use the CSS property display to switch between inline and block inline elements 
 
 - By default div is a block element
+
+- Divs by default have a width of 100%, so to appear in the same line, reduce the width. 
 -->
