--- a/youtube.html
+++ b/youtube.html
@@ -26,8 +26,8 @@
 
             <div class="channel-image">
                 <img class="profile-picture" src="channel-pictures/brownlee.jpeg" alt="brownlee">
-            </div>
-
+            </div> 
+            
             <div class="video-details">
                 <p class="video-title">Talking Tech and AI with Google CEO Sundar Pichai!</p>
                 <p class="video-author">Marques Brownlee</p>
@@ -61,4 +61,10 @@
 - Divs by default have a width of 100%, so to appear in the same line, reduce the width. 
 
 - Put up a font stack for when Google somehow fails to load a given font 
+
+- Although the CSS display inline block property, it does have alignment issues 
+
+- You can write CSS code inside an HTML element (inline styles)
+
+- Grids maintain alignment better than display inline block
 -->
