--- a/grid.html
+++ b/grid.html
@@ -1,19 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grid Practice</title>
 </head>
+
 <body>
     <div style="
         display: grid;
         grid-template-columns: 100px 100px;
+
+        column-gap: 20px;
         ">
         <div style="background-color: gray;">div 1</div>
-        <div style="background-color: pink;">div 2</div>
+        <div style="background-color: pink;">div 2 <p>strong</p>
+        </div>
+    </div>
+
+    <div style="
+        margin-top: 20px;
+        
+        display: grid;
+        grid-template-columns: 100px 100px;
+
+        column-gap: 20px;
+        ">
+            <div style="background-color: gray;">div 1</div>
+            <div style="background-color: pink;">div 2 <p>strong</p>
+        </div>
     </div>
 
 </body>
+
 </html>
