--- a/grid.html
+++ b/grid.html
@@ -12,8 +12,6 @@
     <div style="
         display: grid;
         grid-template-columns: 100px 100px;
-
-        column-gap: 20px;
         ">
         <div style="background-color: gray;">div 1</div>
         <div style="background-color: pink;">div 2 <p>strong</p>
@@ -22,16 +20,16 @@
 
     <div style="
         margin-top: 20px;
-        
-        display: grid;
-        grid-template-columns: 100px 100px;
 
-        column-gap: 20px;
+        display: grid;
+        grid-template-columns: 100px 100px 200px;
         ">
-            <div style="background-color: gray;">div 1</div>
-            <div style="background-color: pink;">div 2 <p>strong</p>
+            <div style="background-color: gray;">100px</div>
+            <div style="background-color: pink;">100px <p>strong</p>
         </div>
+        <div style="background-color: teal;">200px</div>
     </div>
+    
 
 </body>
 
