--- a/youtube.html
+++ b/youtube.html
@@ -22,7 +22,7 @@
             <img class="thumbnail-1" src="thumbnails/thumbnail-1.webp" alt="marques-brownlee">
         </div>
 
-        <div>
+        <div class="video-info-grid">
 
             <div class="channel-image">
                 <img class="profile-picture" src="channel-pictures/brownlee.jpeg" alt="brownlee">
@@ -38,6 +38,7 @@
 
     </div>
 
+    
     <div class="video-preview">
         <img class="thumbnail-1" src="thumbnails/ksi.jpg" alt="ksi">
         <p>Try Not To Laugh Challenge #9</p>
