--- a/youtube.html
+++ b/youtube.html
@@ -6,16 +6,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YouTube</title>
-    <link rel="stylesheet" href="youtube.css">
+    <link rel="stylesheet" href="styles/youtube.css">
+    <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/general.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 
-<body>
-    <input class="search-bar" type="textbox" placeholder="Search">
+<body class="body">
+<!--HEADER-->
+    <div class="header">  
+        <div class="left-section">
+            left section
+        </div> 
 
-<div class="video-grid">
+        <div class="middle-section">
+            <input class="search-bar" type="textbox" placeholder="Search">
+        </div>
+
+        <div class="right-section">
+            right section
+        </div>
+        
+    </div>
+
+
+<!--MAIN CONTENT-->
+    <div class="video-grid">
     <div class="video-preview">
 
         <div class="thumbnail-row">
@@ -176,5 +194,7 @@
 
 - Grids maintain alignment better than display inline block
 
-[]
+- Both flexbox and grid allow you to create layourt that are horizontally aligned
+
+- Flex 1 = 1fr for Grid Display 
 -->
