used nested flexbox to build the header

--- a/youtube.html
+++ b/youtube.html
@@ -18,7 +18,8 @@
 <!--HEADER-->
     <div class="header">  
         <div class="left-section">
-            left section
+            <img class="hamburger-menu" src="icons/hamburger-menu.svg" alt="hamburger-menu">
+            <img class="youtube-logo" src="icons/youtube-logo.svg" alt="you-tube_logo">
         </div> 
 
         <div class="middle-section">
