--- a/youtube.html
+++ b/youtube.html
@@ -24,10 +24,19 @@
 
         <div class="middle-section">
             <input class="search-bar" type="textbox" placeholder="Search">
+            <button class="search-button">
+                <img class="search-icon" src="icons/search.svg" alt="search-icon">
+            </button>
+
+            <button class="voice-search-button">
+                <img class="voice-search-icon" src="icons/voice-search-icon.svg" alt="voice search">
+            </button>
         </div>
 
         <div class="right-section">
-            right section
+            <img class="youtube-apps-icon" src="icons/youtube-apps.svg" alt="youtube-apps">
+            <img class="notifications-icon" src="icons/notifications.svg" alt="notifications">
+            <img class="my-channel-icon" src="icons/my-channel.jpeg" alt="my-channel">
         </div>
         
     </div>
