--- a/grid.html
+++ b/grid.html
@@ -44,7 +44,21 @@
     }
 
     #tweet-content{
-        
+        margin-top: 10px;
+    }
+
+    #youtube-link{
+        margin-top: 20px;
+        padding: 20px;
+        display: flex;
+        justify-content: space-around;
+        border: solid;
+        border-style: ridge;
+        border-radius: 20px;
+    }
+
+    #channel-pic img{
+        width: 60px;
     }
 </style>
 </html>
