--- a/position.html
+++ b/position.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Positions Practice</title>
 </head>
-<body style="height: 2000px; padding-top: 60px;">
+<body style="height: 2000px; padding-top: 60px; padding-left: 80px;">
     <div style="background-color: black;
     color:#fff;
     position: fixed;
@@ -15,13 +15,23 @@
     left: 0;
     height: 50px;
     ">header</div>
+
+    <div style="
+    background-color: blueviolet;
+    position: fixed;
+    top: 50px;
+    bottom: 0;
+    left: 0;
+    width: 72px;
+    ">Sidebar</div>
+
     <div style="
     background-color: aqua;
     width: 200px;
     height: 200px;
     ">div 1</div>
     <div style="
-    background-color:blueviolet;
+    background-color:blue;
     width: 200px;
     height: 200px;
     ">div 2</div>
